[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/baseline_volume_up_white_18dp.png" type="Texture" id=3]
[ext_resource path="res://UI/Bpm_Vol.gd" type="Script" id=4]

[node name="Bpm_Vol" type="VBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BpmInfo" type="HBoxContainer" parent="."]
margin_right = 339.0
margin_bottom = 16.0

[node name="SpeedSlider" type="HSlider" parent="BpmInfo"]
margin_right = 81.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 250.0
value = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTimeLabel" type="Label" parent="BpmInfo"]
margin_left = 85.0
margin_top = 1.0
margin_right = 167.0
margin_bottom = 15.0
size_flags_horizontal = 3

[node name="GlobalTimeLabel" type="Label" parent="BpmInfo"]
margin_left = 171.0
margin_top = 1.0
margin_right = 253.0
margin_bottom = 15.0
size_flags_horizontal = 3

[node name="SpeedLabel" type="Label" parent="BpmInfo"]
margin_left = 257.0
margin_top = 1.0
margin_right = 339.0
margin_bottom = 15.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeInfo" type="HBoxContainer" parent="."]
margin_top = 20.0
margin_right = 339.0
margin_bottom = 44.0

[node name="VolumeSlider" type="HSlider" parent="VolumeInfo"]
margin_right = 150.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -100.0

[node name="VolMute" type="Button" parent="VolumeInfo"]
margin_left = 154.0
margin_right = 184.0
margin_bottom = 24.0
icon = ExtResource( 3 )

[node name="VolumeLabel" type="Label" parent="VolumeInfo"]
margin_left = 188.0
margin_top = 5.0
margin_right = 339.0
margin_bottom = 19.0
size_flags_horizontal = 3
[connection signal="value_changed" from="BpmInfo/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="value_changed" from="VolumeInfo/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="button_down" from="VolumeInfo/VolMute" to="." method="_on_VolMute_button_down"]
